@@ -95,7 +95,7 @@
 			</SELECT>
 			{t}or Customer ID:{/t}
 			{/if}
-			<INPUT TYPE="TEXT" NAME="customerid" VALUE="{if $customer.id}{$customer.id}{else}{$document.customerid}{/if}" SIZE="5"{if $customers} onChange="document.documentadd.customer.value=document.documentadd.customerid.value"{/if} {tip text="Enter customer ID"}>
+			<INPUT TYPE="TEXT" NAME="customerid" VALUE="{if $customer.id}{$customer.id}{elseif $document.customerid}{$document.customerid}{/if}" SIZE="5"{if $customers} onChange="document.documentadd.customer.value=document.documentadd.customerid.value"{/if} {tip text="Enter customer ID"}>
 			<a href="javascript: void(0);" onClick="return customerchoosewin(document.documentadd.customerid);" {tip text="Click to search customer"}>{t}Search{/t}&nbsp;&raquo;&raquo;&raquo;</A>
 		</TD>
 	</TR>
