@@ -38,6 +38,7 @@ version ? (????-??-??):
   - lms-notify: added messages log support, added options to send notifies
     about new invoice and paytime overdo, removed mailtemplate and mailsubject
     option, added *_template and *_subject options (alec)
+  - added creation date filter on documents list (alec)
 
 version 1.11.7 Bastet (2009-02-13):
 
